--- a/batch-changes/pr-auditor-rollout.yml
+++ b/batch-changes/pr-auditor-rollout.yml
@@ -55,23 +55,16 @@ steps:
         check-pr:
           runs-on: ubuntu-latest
           steps:
-            - uses: actions/checkout@v4
-              with:
-                repository: 'sourcegraph/devx-service'
-                token: ${{ secrets.PR_AUDITOR_TOKEN }}
-            - uses: actions/setup-go@v4
-              with: { go-version: '1.22' }
+            - uses: actions/checkout@v2
+              with: { repository: 'sourcegraph/sourcegraph' }
+            - uses: actions/setup-go@v2
+              with: { go-version: '1.18' }
 
-            - run: 'go run ./cmd/pr-auditor'
+            - run: ./dev/pr-auditor/check-pr.sh
               env:
-                GITHUB_EVENT_PATH: ${{ env.GITHUB_EVENT_PATH }}
-                GITHUB_TOKEN: ${{ secrets.PR_AUDITOR_TOKEN }}
-                GITHUB_RUN_URL: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
-        report_failure:
-          needs: check-pr
-          if: ${{ failure() }}
-          uses: sourcegraph/workflows/.github/workflows/report-job-failure.yml@main
-          secrets: inherit
+                GITHUB_EVENT_PATH: ${{ "${{ env.GITHUB_EVENT_PATH }}" }}
+                GITHUB_TOKEN: ${{ "${{ secrets.CODENOTIFY_GITHUB_TOKEN }}" }}
+                GITHUB_RUN_URL: https://github.com/${{ "${{ github.repository }}" }}/actions/runs/${{ "${{ github.run_id }}" }}
       EOF
 
       mkdir -p .github/workflows
